--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -59,13 +59,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: inherit;
       background-color: inherit;
     }
-    #suDrawer{
-      text-align:left;
-      --app-drawer-content-container:{
-        background-color:#f2f2f2;
-        overflow-y:scroll;
-      }
-    }
     .disabled{
       color:#000000 !important;
       opacity: .38 !important;
@@ -213,45 +206,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding:5px;
       display:inline;
     }
+
+    .searchInput input{
+      background-color:#5A67BB;
+      border:solid 1px #5A67BB;
+      transition: box-shadow 0.3s, border 0.3s;
+      color:#FFF;
+      max-width: 100px;
+
+    }
+
     .searchInput input:focus{
       border:border:solid 1px #5A67BB;
       outline:none;
     }
-    .searchInput input{
-      background-color:#5A67BB;
-      border:solid 1px #5A67BB;
-      width:25%;
-      transition: box-shadow 0.3s, border 0.3s;
-      color:#FFF;
-    }
-    .mobileSearchInput{
-      border-radius:20px;
-      border:solid 1px #FFFFFF;
-      background-color:#FFFFFF;
-      opacity:1;
-      padding:5px;
-      display:inline;
-    }
-    .mobileSearchInput input:focus{
-      border:border:solid 1px #FFFFFF;
-      opacity:1;
-      outline:none;
-    }
-    .mobileSearchInput input{
-      background-color:#FFFFFF;
-      border:solid 1px #FFFFFF;
-      opacity:1;
-      width:25%;
-      transition: box-shadow 0.3s, border 0.3s;
-      color:#0e0e0e0e;
-    }
+
     #searchDropdown{
-      top:65px;
-      left:0;
-      width:50%;
-      position:absolute;
+      margin: 0px;
       background-color:#FFF;
-      z-index:5;
       color:#000;
     }
     #notificationDropdown{
@@ -355,18 +327,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       border-bottom:1px solid #a0a0a0;
       display:inline-block;
     }
-    .rightMenuTabs{
+    paper-tabs {
       --paper-tabs-selection-bar-color:#e51561;
-      --paper-tabs-selection-bar:{
-        z-index:999;
-      }
     }
-    paper-tab{
+
+    paper-tab {
       --paper-tab-ink:#e51561;
     }
-    paper-tab.iron-selected{
-      background-color:#303D95;
-    }
+
     .mobileTab{
       --iron-icon-height:40px;
       --iron-icon-width:40px;
@@ -440,6 +408,99 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     .searchName {
       margin-left: 10px;
+    }
+
+    .menu-link {
+      all: inherit;
+      text-transform: uppercase;
+    }
+
+    .sub-menu-href {
+      color: inherit;
+      font-weight: inherit;
+      font-size: inherit;
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .desktop-menu {
+
+    }
+
+    .desktop-menu .inactive {
+
+    }
+
+    .desktop-menu .active {
+
+    }
+
+    .nav-tabs {
+      --paper-tab-content: {
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    }
+
+    .nav-icon-button {
+      height: 24px;
+      width: 24px;
+      --iron-icon: {
+        padding:0;
+        height: 24px;
+        width: 24px;
+      }
+    }
+
+    .top-nav {
+      z-index: 999;
+    }
+
+    .bottom-nav {
+      transition: all 0.5s ease;
+      z-index: 999;
+    }
+
+    .bottom-nav-closed {
+      opacity:0;
+      height:0px;
+      z-index:0;
+    }
+
+    #subMenuDialog {
+      margin: 0px;
+      background-color: #3d4ba8;
+    }
+
+    #subMenuDialog paper-listbox {
+      background-color: #3d4ba8;
+    }
+
+    .sub-menu-item {
+      transition: all 0.5s ease;
+      background-color: #3d4ba8;
+      color: rgb(255, 255, 255);
+      text-transform: capitalize;
+    }
+
+    .sub-menu-item.iron-selected {
+      border-bottom: 2px solid #e51561;
+      color: #fff;
+    }
+
+    .sub-header-menu {
+      border-bottom: none;
+    }
+
+    .sub-header-menu-selected::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      height: 2px;
+      width: 100%;
+      background-color: #e51561;
     }
 
     </style>
